
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1278] Fixed issues with checkbox TVs and default values, fixed the 'set to default' button for complex inputs
- [#MODX-1280] Fixes to the user create processor
- Added OnBeforeUserActivate, OnUserActivate events
- Added 'active' boolean field to modUser. Defaults to 1.
- Added OnCreateUser, OnDeleteUser, OnUpdateUser events
- [#MODX-1170] Fixed issues with Export Topic
- [#MODX-912] Fixed isinrole/ismember output filter
- [#MODX-677] Made capitalization consistent on Resource edit/create screen
- [#MODX-1251] Fixed issue with server offset displaying incorrectly
- [#MODX-896] Fixed issue with server_offset setting description
- [#MODX-928] Fixed issue where parent resource wasnt refreshing properly
- [#MODX-777] Made consistent the checkDirty behaviour of save buttons across manager
- [#MODX-938] Added check to build to check if core+core.transport.zip were removed before build starts. 
- [#MODX-629] Added missing automatic_alias setting to build
- [#MODX-790] Fixed issue where couldnt browse back to root directory with MODx.Browser
- [#MODX-902] Fixed empty warning message for removing category
- Fixed bug with removing categories
- Fixed issue where couldn't drag a resource onto a resource with no children
- [#MODX-1130] Fixed issue with parent triggerfield; also redid how tree hrefs load so that clicking on a node in the tree to load url can be disabled
- [#MODX-1133] Fixed issues with hotkey behavior
- [#MODX-1230] Fixed issue where drag Resource to symlink/weblink content field would add tags as well
- [#MODX-1273] Added OnLoadWebPageCache event invocation to modRequest->getResource().
- [#MODX-1273] Fixed events in User update/create form