@@ -385,5 +385,7 @@ if (!empty($_POST['syncsite']) || !empty($_POST['clearCache'])) {
 if (!isset($_POST['modx-ab-stay']) || $_POST['modx-ab-stay'] !== 'stay') {
     $resource->removeLock();
 }
+$resourceArray = $resource->get(array('id','alias'));
+$resourceArray['preview_url'] = $modx->makeUrl($resource->get('id'));
 
-return $modx->error->success('', $resource->get(array('id')));
+return $modx->error->success('',$resourceArray);
